--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -13,8 +13,9 @@ body:
       label: What type of defect/bug is this?
       multiple: true
       options:
-        - Crash or memory corruption
-        - Non compliance with a standards document, or incorrect API usage
+        - Crash or memory corruption (segv, abort, etc...)
+        - Non compliance with a standards document
+        - incorrect 3rd party API usage
         - Unexpected behaviour (obvious or verified by project member)
   - type: textarea
     id: how_to_reproduce
@@ -29,6 +30,16 @@ body:
     attributes:
       label: Relevant log output
       description: Output of ``[radiusd|freeradius] -X`` showing issue occurring
+      placeholder: |
+        $ radiusd -X
+        Info  : FreeRADIUS Version 4.0.0
+        Info  : Copyright 1999-2021 The FreeRADIUS server project and contributors
+        Info  : There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A
+        Info  : PARTICULAR PURPOSE
+        Info  : You may redistribute copies of FreeRADIUS under the terms of the
+        Info  : GNU General Public License
+        Info  : For more information about these matters, see the file named COPYRIGHT
+        ...
       render: shell
   - type: textarea
     id: backtrace
@@ -36,6 +47,8 @@ body:
       label: Backtrace from LLDB or GDB
       description: |
         Provide a full backtrace from LLDB or GDB (if relevant). 
-        [See here](https://github.com/FreeRADIUS/freeradius-server/blob/master/doc/source/bugs.md) for 
-        debugging instructions and how to obtain backtraces.
+        See [here](https://github.com/FreeRADIUS/freeradius-server/blob/master/doc/source/bugs.md) for debugging instructions and how to obtain backtraces.
+      placeholder: |
+        $ lldb -- radiusd -X
       render: shell
+
