--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -17,30 +17,22 @@ body:
         - Non compliance with a standards document
         - incorrect 3rd party API usage
         - Unexpected behaviour (obvious or verified by project member)
+      required: true
   - type: textarea
     id: how_to_reproduce
     attributes:
       label: How can the issue be reproduced?
       description: A clear and concise list of steps describing how to describe the issue.
       placeholder: Set configuration X to Y, start the server, send 1000 conflicting packets...
-    validations:
-      required: false
+      required: true
   - type: textarea
     id: log_output
     attributes:
       label: Relevant log output
       description: Output of ``[radiusd|freeradius] -X`` showing issue occurring
-      placeholder: |
-        $ radiusd -X
-        Info  : FreeRADIUS Version 4.0.0
-        Info  : Copyright 1999-2021 The FreeRADIUS server project and contributors
-        Info  : There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A
-        Info  : PARTICULAR PURPOSE
-        Info  : You may redistribute copies of FreeRADIUS under the terms of the
-        Info  : GNU General Public License
-        Info  : For more information about these matters, see the file named COPYRIGHT
-        ...
+      placeholder: $ radiusd -X
       render: shell
+      required: true
   - type: textarea
     id: backtrace
     attributes:
@@ -48,7 +40,6 @@ body:
       description: |
         Provide a full backtrace from LLDB or GDB (if relevant). 
         See [here](https://github.com/FreeRADIUS/freeradius-server/blob/master/doc/source/bugs.md) for debugging instructions and how to obtain backtraces.
-      placeholder: |
-        $ lldb -- radiusd -X
+      placeholder: $ lldb -- radiusd -X
       render: shell
 
