--- a/.github/ISSUE_TEMPLATE/other.yml
+++ b/.github/ISSUE_TEMPLATE/other.yml
@@ -18,7 +18,7 @@ body:
         
         If you post those issues here that fall into the above categories, they will be closed and locked. Repeat offenders will be BANNED.
         
-        If you are _sure_ that the question you have does not fall into any of the above categories, and would not be better answered by posting to the [mailing lists](https://freeradius.org/support/) remove the "close" label and add content below.  If you do not, your issue will be automatically closed.
+        If you are _sure_ that the question you have does not fall into any of the above categories, and would not be better answered by posting to the [mailing lists](https://freeradius.org/support/), remove the "close" label and add content below.  If you do not, your issue will be automatically closed.
   - type: textarea
     id: other
     attributes:
