--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -6,3 +6,6 @@ contact_links:
   - name: Questions about developing custom modules and extending functionality
     url: https://freeradius.org/support/
     about: 'Ask questions about developing code for FreeRADIUS on the "development" mailing list.'
+  - name: Security defects
+    url: mailto:security@freeradius.org
+    about: Security defects should be reported directly to the FreeRADIUS security team (security@freeradius.org)
