--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -7,5 +7,5 @@ contact_links:
     url: https://freeradius.org/support/
     about: 'Ask questions about developing code for FreeRADIUS on the "development" mailing list.'
   - name: Security defects
-    url: mailto:security@freeradius.org
+    url: https://freeradius.org/security/
     about: Security defects should be reported directly to the FreeRADIUS security team (security@freeradius.org)
