--- a/.github/ISSUE_TEMPLATE/other.yml
+++ b/.github/ISSUE_TEMPLATE/other.yml
@@ -1,6 +1,6 @@
 name: Any other questions about FreeRADIUS
 description: Questions not relating to server configuration or development.
-title: "READ THE MESSAGE BELOW, DO NOT SUBMIT A GITHUB ISSUE"
+title: READ THE MESSAGE BELOW BEFORE SUBMITTING AN ISSUE
 labels: [close]
 body:
   - type: markdown
@@ -18,7 +18,7 @@ body:
         
         If you post those issues here that fall into the above categories, they will be closed and locked. Repeat offenders will be BANNED.
         
-        If you are _sure_ that the question you have does not fall into any of the above categories, and would not be better answered by posting to the [mailing lists](https://freeradius.org/support/), remove the "close" label and add content below.  If you do not, your issue will be automatically closed.
+        If you are _sure_ that the question you have does not fall into any of the above categories and would not be better answered by posting to the [mailing lists](https://freeradius.org/support/), remove the "close" label, and add content in the text field below.  If you do not, your issue will be automatically closed.
   - type: textarea
     id: other
     attributes:
