Add secondary LDAP server to CI tests
Allows for referral tests and xlats calling a different server to the
module configured one.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -288,6 +288,7 @@ jobs:
             mysql-setup.sh \
             openresty-setup.sh \
             ldap-setup.sh \
+            ldap2-setup.sh \
             redis-setup.sh; do
 
             script="./scripts/ci/$i"
