Fix typo in MySQL/ippool queries.conf

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -21,7 +21,7 @@
 # If different criteria are used, check the indexes on the IP pool table to ensure the fields
 # are appropriately indexed.  To disable stickyness comment out this query.
 #
-allocate_existing = \"
+allocate_existing = "\
 	SELECT framedipaddress FROM ${ippool_table} \
 	WHERE pool_name = '%{control:${pool_name}}' \
 	AND nasipaddress = '%{NAS-IP-Address}' AND pool_key = '${pool_key}' \
