Fix ippool 'skip_locked' variable set
If not in use, it must be declared just to make the parser happy.

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -10,6 +10,7 @@
 #  following if you are running a suitable version of MySQL
 #
 #skip_locked = "SKIP LOCKED"
+skip_locked = ""
 
 #
 #  This series of queries allocates an IP address
