--- a/raddb/mods-config/sql/ippool/oracle/queries.conf
+++ b/raddb/mods-config/sql/ippool/oracle/queries.conf
@@ -10,6 +10,7 @@
 #  running a suitable version of Oracle
 #
 #skip_locked = "SKIP LOCKED"
+skip_locked = ""
 
 allocate_begin = "commit"
 start_begin = "commit"
