Fix typo in SQL ippool query

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -28,7 +28,7 @@ allocate_existing = "\
 	AND nasipaddress = '%{NAS-IP-Address}' AND pool_key = '${pool_key}' \
 	ORDER BY expiry_time DESC \
 	LIMIT 1 \
-	FOR UDPATE ${skip_locked}"
+	FOR UPDATE ${skip_locked}"
 
 #
 #  Find a free IP address from the pool, choosing the oldest expired one.
