Fix another typo in SQL ippool queries.conf

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -36,7 +36,7 @@ allocate_existing = "\
 allocate_find = "\
 	SELECT framedipaddress FROM ${ippool_table} \
 	WHERE pool_name = '%{control:${pool_name}}' \
-	expiry_time < NOW() \
+	AND expiry_time < NOW() \
 	ORDER BY expiry_time \
 	LIMIT 1 \
 	FOR UPDATE ${skip_locked}"
