Test multiple hop LDAP referrals

--- a/src/tests/modules/ldap/module.conf
+++ b/src/tests/modules/ldap/module.conf
@@ -360,6 +360,7 @@ ldap {
 		#
 		chase_referrals = yes
 		rebind = yes
+		referral_depth = 2
 
 		#  Seconds to wait for LDAP query to finish. default: 20
 		timeout = 10
