--- a/raddb/proxy.conf
+++ b/raddb/proxy.conf
@@ -693,10 +693,9 @@ realm example.com {
 	auth_pool = my_auth_failover
 #	acct_pool = acct
 
-	#  As of Version 3.0, the server can proxy CoA packets
-	#  based on the Operator-Name attribute.  This requires
-	#  that the "suffix" module be listed in the "recv-coa"
-	#  section.
+	#  The server can proxy CoA packets based on the Operator-Name
+	#  attribute.  This requires that the "suffix" module be
+	#  listed in the "recv-coa" section.
 	#
 	#  See raddb/sites-available/coa
 	#
@@ -818,9 +817,6 @@ realm LOCAL {
 #     file parser ignore any "special" characters in the regex.
 #     Yes, this rule is different than the normal "unlang" rules for
 #     regular expressions.  That may be fixed in a future release.
-#
-#   - for version 3.0.4 and following, with "correct_escapes = true",
-#     use normal regex backslash rules.  Just one.  Not two.
 #
 #   - If you are matching domain names, put a '$' at the end of the regex
 #     that matches the domain name.  This tells the regex matching code
