MariADB >= 10.6 also support 'SKIP LOCK'

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -6,8 +6,9 @@
 
 
 #  Using SKIP LOCKED speeds up selection queries
-#  However, it requires MySQL >= 8.0.1.  Uncomment the
-#  following if you are running a suitable version of MySQL
+#  However, it requires MySQL >= 8.0.1 or MariaDB >= 10.6.
+#  Uncomment the following if you are running a suitable
+#  version of MySQL
 #
 #skip_locked = "SKIP LOCKED"
 skip_locked = ""
