ippool: Fix missing 'Called-Station-Id' in the MySQL/procedure.sql
As the scheme.sql has the 'calledstationid' field, we should fill it up.

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -87,6 +87,7 @@ allocate_update = "\
 #		'%{control:${pool_name}}', \
 #		'%{User-Name}', \
 #		'%{Calling-Station-Id}', \
+#		'%{Called-Station-Id}', \
 #		'%{NAS-IP-Address}', \
 #		'${pool_key}', \
 #		${lease_duration} \
