--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: freeradius
 Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  quilt,
  dpkg-dev (>= 1.13.19),
- dh-systemd (>= 1.5),
+ dh-systemd (>= 1.5) | debhelper (>= 13.3.0),
  autotools-dev,
  libcurl4-openssl-dev | libcurl4-gnutls-dev,
  libcap-dev,
@@ -32,7 +32,6 @@ Build-Depends: @BUILDDEPS@ debhelper (>= 9),
  libhiredis-dev,
  python-dev,
  samba-dev,
- dh-systemd,
  unixodbc-dev,
  asciidoctor,
  pandoc
