Let's keep lowercase as we have in everywhere

--- a/raddb/mods-config/sql/main/postgresql/queries.conf
+++ b/raddb/mods-config/sql/main/postgresql/queries.conf
@@ -89,7 +89,7 @@ class {
 	#
 	column_name =	# ", Class"
 	packet_xlat =	# ", '%{Class}'"
-	reply_xlat =	# ", '%{Reply:Class}'"
+	reply_xlat =	# ", '%{reply:Class}'"
 }
 
 #######################################################################
