--- a/raddb/mods-config/sql/main/oracle/queries.conf
+++ b/raddb/mods-config/sql/main/oracle/queries.conf
@@ -71,7 +71,7 @@ class {
 	#
 	column_name =	# ", class"
 	packet_xlat =	# ", '%{Class}'"
-	reply_xlat =	# ", '%{Reply:Class}'"
+	reply_xlat =	# ", '%{reply:Class}'"
 }
 
 #######################################################################
