--- a/src/tests/modules/cipher/module.conf
+++ b/src/tests/modules/cipher/module.conf
@@ -1,8 +1,8 @@
 cipher cipher_rsa {
 	rsa {
 		private_key_password = whatever
-		private_key_file = $ENV{MODULE_TEST_DIR}/server.key
-		certificate_file = $ENV{MODULE_TEST_DIR}/server.crt
+		private_key_file = raddb/certs/rsa/server.key
+		certificate_file = raddb/certs/rsa/server.pem
 
 		oaep {
 			oaep_digest = "sha256"
