rlm_sqlcounter Add MySQL query sample based on specific day

--- a/raddb/mods-config/sql/counter/mysql/dailycounter.conf
+++ b/raddb/mods-config/sql/counter/mysql/dailycounter.conf
@@ -31,3 +31,16 @@ query = "\
 #	FROM radacct \
 #	WHERE username = '%{${key}}' \
 #	AND acctstarttime BETWEEN FROM_UNIXTIME('%%b') AND FROM_UNIXTIME('%%e')"
+
+#
+#  This query allows retrieving the entries based on a
+#  period that resets on a particular day of the month.
+#
+#reset_day = 21
+#query = "\
+#	SELECT SUM(acctsessiontime) FROM radacct WHERE username = '%{${key}}' AND \
+#		IF (DAY(CURDATE()) >= ${reset_day}, \
+#			acctstarttime > DATE(DATE_FORMAT(NOW(), '%Y-%m-${reset_day}')), \
+#			acctstarttime > DATE(DATE_FORMAT(NOW() - INTERVAL 1 MONTH, '%Y-%m-${reset_day}')) \
+#		)"
+#
