Should be testing packaging not whether the upstream OS provides broke things...

--- a/.github/workflows/ci-deb.yml
+++ b/.github/workflows/ci-deb.yml
@@ -44,7 +44,7 @@ jobs:
           M=$(cat <<EOF
           {
             "env": [
-              { "NAME": "debian-sid",   "OS": "debian:sid",      "NR_EXTRAS": ""  }
+              { "NAME": "debian-11",    "OS": "debian:bullseye", "NR_EXTRAS": "1" },
             ]
           }
         EOF
