Install the mibs in <prefix>/share/snmp/mibs

--- a/Make.inc.in
+++ b/Make.inc.in
@@ -16,6 +16,7 @@ docdir		= @docdir@
 mandir		= @mandir@
 datadir		= @datadir@
 dictdir		= @dictdir@
+mibdir		= @mibdir@
 logdir		= @logdir@
 includedir	= @includedir@
 
