if we reference ${skip_locked}, we must use it

--- a/raddb/mods-config/sql/ippool/mysql/queries.conf
+++ b/raddb/mods-config/sql/ippool/mysql/queries.conf
@@ -9,6 +9,7 @@
 #  following if you are running a suitable version of MySQL
 #
 #  skip_locked = "SKIP LOCKED"
+skip_locked = ""
 
 #
 #  RADIUS (Accounting-Start)
