--- a/raddb/mods-config/sql/ippool/sqlite/queries.conf
+++ b/raddb/mods-config/sql/ippool/sqlite/queries.conf
@@ -91,7 +91,7 @@ alloc_find = "\
 pool_check = "\
 	SELECT id \
 	FROM ${ippool_table} \
-	WHERE pool_name='%{control.IP-Pool.Name}' \
+	WHERE pool_name='%{control.${pool_name}}' \
 	LIMIT 1"
 
 #
