tests for local templates

--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -52,6 +52,18 @@ modules {
 	mschap {
 
 	}
+
+	#
+	#  Tests for in-line templates
+	#
+	template foo {
+		rcode = ok
+	}
+
+	always template_test {
+$TEMPLATE foo
+	}
+
 }
 
 policy {
