--- a/src/tests/keywords/radius.conf
+++ b/src/tests/keywords/radius.conf
@@ -56,14 +56,13 @@ modules {
 	#
 	#  Tests for in-line templates
 	#
-	template foo {
+	template template_test {
 		rcode = ok
 	}
 
 	always template_test {
-$TEMPLATE foo
+$TEMPLATE template_test
 	}
-
 }
 
 policy {
