Include triggers file in modules test

--- a/src/tests/modules/unit_test_module.conf
+++ b/src/tests/modules/unit_test_module.conf
@@ -28,6 +28,8 @@ modules {
 	$INCLUDE $ENV{MODULE_TEST_DIR}/module.conf
 }
 
+$-INCLUDE $ENV{MODULE_TEST_DIR}/triggers.conf
+
 $-INCLUDE $ENV{MODULE_TEST_DIR}/clients.conf
 
 server default {
