--- a/debian/freeradius.service
+++ b/debian/freeradius.service
@@ -17,6 +17,11 @@ EnvironmentFile=-/etc/default/freeradius
 # We provide HOSTNAME here for convenience.
 Environment=HOSTNAME=%H
 
+# Not needed/used unless the freeradius-snmp package is installed.
+# Used by snmptrap and friends to determine where to stored persistent
+# configuration files.
+Environment=SNMP_PERSISTENT_DIR=/var/lib/freeradius/snmp
+
 # Limit memory to 2G this is fine for %99.99 of deployments.  FreeRADIUS
 # is not memory hungry, if it's using more than this, then there's probably
 # a leak somewhere.
@@ -64,6 +69,12 @@ ReadOnlyDirectories=/etc/freeradius/
 
 # We can read and write to the log directory.
 ReadWriteDirectories=/var/log/freeradius/
+
+# We can read and write to our run dir
+ReadWriteDirectories=/var/run/freeradius/
+
+# We can read and write to our persistent dir
+ReadWriteDirectories=/var/lib/freeradius/
 
 [Install]
 WantedBy=multi-user.target
