--- a/raddb/radiusd.conf.in
+++ b/raddb/radiusd.conf.in
@@ -519,15 +519,18 @@ thread pool {
 	#
 	#  num_networks:: Only one network thread is supported for now.
 	#
-	num_networks = 1
+#	num_networks = 1
 
 	#
 	#  num_workers:: The worker threads can be varied.  It should be
-	#  at least one, and no more than 32.  Since each request is
+	#  at least one, and no more than 128.  Since each request is
 	#  non-blocking, there is no reason to run hundreds of threads
 	#  as in v3.
 	#
-	num_workers = 4
+	#  When set to 0 the number of workers will be set from the number
+	#  of cores available on the system.
+	#
+	num_workers = 0
 
 	#
 	#  openssl_async_pool_init:: Controls the initial number of async
