--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -305,7 +305,7 @@ jobs:
         REST_TEST_SERVER_SSL_PORT: 8443
 #       SMTP_TEST_SERVER: 127.0.0.1
 #       SMTP_TEST_SERVER_PORT: 2525
-#       REDIS_TEST_SERVER: 127.0.0.1
+        REDIS_TEST_SERVER: 127.0.0.1
 #       REDIS_IPPOOL_TEST_SERVER: 127.0.0.1
 #       IMAP_TEST_SERVER: 127.0.0.1
 #       IMAP_TEST_SERVER_PORT: 1430
