Fix redis ippool tests

--- a/src/tests/modules/redis_ippool/module.conf
+++ b/src/tests/modules/redis_ippool/module.conf
@@ -8,7 +8,7 @@
 #  expansion.
 #
 redis_ippool {
-	device = &Calling-Station-ID
+	owner = &Calling-Station-ID
 	gateway = &NAS-IP-Address
 	pool_name = &control.IP-Pool.Name
 
