--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,7 +306,7 @@ jobs:
 #       SMTP_TEST_SERVER: 127.0.0.1
 #       SMTP_TEST_SERVER_PORT: 2525
         REDIS_TEST_SERVER: 127.0.0.1
-#       REDIS_IPPOOL_TEST_SERVER: 127.0.0.1
+        REDIS_IPPOOL_TEST_SERVER: 127.0.0.1
 #       IMAP_TEST_SERVER: 127.0.0.1
 #       IMAP_TEST_SERVER_PORT: 1430
 #       IMAP_TEST_SERVER_SSL_PORT: 1431
